# vintasend-sqlalchemy

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  test.db  tox.ini
.github/workflows/: ci.yml
example_app/: models.py
migrations/: env.py
migrations/versions/: 8b1baef54852_create_initial_migrations.py
vintasend_sqlalchemy/: alembic_initial_migration_ops.py  model_factory.py
vintasend_sqlalchemy/services/notification_backends/: sqlalchemy_notification_backend.py
vintasend_sqlalchemy/services/tests/: test_sqlalchemy_asyncio_notification_backend.py  test_sqlalchemy_notification_backend.py
